tests/corpus/gitconfig/valid/inline_key.gitconfig
; Exercises decision 4: git parses a bare/key=value entry trailing a section header
[s]x
[t] k = v
[u] m = a \
	b
