tests/corpus/gitconfig/invalid/malformed_header.gitconfig
; Exercises: a section header without the closing ] is a MalformedSectionHeader error
[unclosed
	key = value
